Criada lógica para create e update do climatizador.rb

--- a/app/views/climatizadors/show.html.erb
+++ b/app/views/climatizadors/show.html.erb
@@ -5,5 +5,10 @@
   <%= @climatizador.temperatura %>
 </p>
 
+<p>
+  <strong>Historico:</strong>
+  <%= @climatizador.historico %>
+</p>
+
 <%= link_to 'Edit', edit_climatizador_path(@climatizador) %> |
 <%= link_to 'Back', climatizadors_path %>
