--- a/app/views/umidificadors/_form.html.erb
+++ b/app/views/umidificadors/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :umidade %><br>
     <%= f.text_field :umidade %>
   </div>
+  <div class="field">
+    <%= f.label :historico %><br>
+    <%= f.text_area :historico %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
