--- a/app/views/umidificadors/show.html.erb
+++ b/app/views/umidificadors/show.html.erb
@@ -5,5 +5,10 @@
   <%= @umidificador.umidade %>
 </p>
 
+<p>
+  <strong>Historico:</strong>
+  <%= @umidificador.historico %>
+</p>
+
 <%= link_to 'Edit', edit_umidificador_path(@umidificador) %> |
 <%= link_to 'Back', umidificadors_path %>
