--- a/app/views/climatizadors/index.html.erb
+++ b/app/views/climatizadors/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Temperatura</th>
+      <th>Historico</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +15,7 @@
     <% @climatizadors.each do |climatizador| %>
       <tr>
         <td><%= climatizador.temperatura %></td>
+        <td><%= climatizador.historico %></td>
         <td><%= link_to 'Show', climatizador %></td>
         <td><%= link_to 'Edit', edit_climatizador_path(climatizador) %></td>
         <td><%= link_to 'Destroy', climatizador, method: :delete, data: { confirm: 'Are you sure?' } %></td>
