--- a/app/views/climatizadors/show.html.erb
+++ b/app/views/climatizadors/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Usuario:</strong>
+  <%= @climatizador.usuario_id %>
+</p>
+
+<p>
   <strong>Historico:</strong>
   <%= @climatizador.historico %>
 </p>
