--- a/app/views/climatizadors/_form.html.erb
+++ b/app/views/climatizadors/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :temperatura %>
   </div>
   <div class="field">
+    <%= f.label :usuario_id %><br>
+    <%= f.number_field :usuario_id %>
+  </div>
+  <div class="field">
     <%= f.label :historico %><br>
     <%= f.text_area :historico %>
   </div>
