--- a/app/views/umidificadors/index.html.erb
+++ b/app/views/umidificadors/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Umidade</th>
+      <th>Usuario</th>
       <th>Historico</th>
       <th colspan="3"></th>
     </tr>
@@ -15,6 +16,7 @@
     <% @umidificadors.each do |umidificador| %>
       <tr>
         <td><%= umidificador.umidade %></td>
+        <td><%= umidificador.usuario_id %></td>
         <td><%= umidificador.historico %></td>
         <td><%= link_to 'Show', umidificador %></td>
         <td><%= link_to 'Edit', edit_umidificador_path(umidificador) %></td>
